Release CMTK-2.2.3:

(r4447) Added: new tool, "dwi_find_bad_slices," to detect bad slices in sets
    of diffusion-weighted images.
(r4447) Changed: image-to-physical matrix and slice spacing now work properly
    (as in, without generating Inf/NaN values) when splitting volume into single
    slices and re-stacking it. This has caused some baselines to change, because
    the volume field of view sizes have seen subtle changes as a result.


Release CMTK-2.2.2 (2012-06-18):

(r4438) Added: new tools "fit_spline_xform" and "fit_affine_xform" to fit
    a single B-spline or affine transformation, respectively, to a list of
    concentated, optionally inverted, transformations.
(r4420) Fixed: "reorient" tool can now force reorientation when original image
    orientation is overridden by command line argument.
(r4400) Obsoleted: the "mip" tool as well as library code exclusively used by
    it (e.g., support for PGM file format; volume/ray accumulators) have been
    removed.
(r4385) Changed: the "fit_spline_xform" tool has been renamed to
    "fit_spline_dfield" to make room for a new tool which will fit splines to
    arbitrary transformation sequences.
(r4369) Added: new "streamxform" tool to apply sequences of transformations to
    point coordinates read from standard input. The old tool, "gregxform", has
    been deprecated and may be removed in a future release of CMTK.
(r4351) Changed: all nonrigid transformation files, "registration," are now
    written gzip-compressed. (Linear transformation files are generally much
    smaller and continue to be written as plain uncompressed files.)
(r4347) Added: "dcm2image" tool has two new options, "--filter" and
    "--exclude", to include or exclude DICOM files selectively based on
    matching a provided text to values of user-specified DICOM tags.
(r4326) Added: ADNI phantom detector now also computes SNR and four CNR
    estimates. These are all also written to the XML phantom description
    file.