@@ -386,16 +386,21 @@ IF(CMTK_BUILD_MXML)
   INCLUDE_DIRECTORIES(BEFORE ${MXML_INCLUDE_DIR})
   SET(MXML_LIBRARIES "cmtkMxml" CACHE INTERNAL "")
 ELSE(CMTK_BUILD_MXML)
-  IF(MXML_FOUND)
-    MESSAGE( STATUS "Using system mxml" )
-  ELSE(MXML_FOUND)
-    MESSAGE( STATUS "Building bundled mxml due to missing system mxml" )
+  IF(NOT MXML_FOUND OR ${MXML_VERSION} STRLESS 2.7)
+    IF(NOT MXML_FOUND)
+      MESSAGE( STATUS "Building bundled mxml due to missing system mxml" )
+    ELSE(NOT MXML_FOUND)
+      MESSAGE( STATUS "Building bundled mxml due to outdated system mxml (minimum version required is 2.7, installed version is ${MXML_VERSION})" )
+    ENDIF(NOT MXML_FOUND)
+
     SET(CMTK_BUILD_MXML 1)
     
     SET(MXML_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/mxml")
     INCLUDE_DIRECTORIES(BEFORE ${MXML_INCLUDE_DIR})
     SET(MXML_LIBRARIES "cmtkMxml" CACHE INTERNAL "")
-  ENDIF(MXML_FOUND)
+  ELSE(NOT MXML_FOUND OR ${MXML_VERSION} STRLESS 2.7)
+    MESSAGE( STATUS "Using system mxml version ${MXML_VERSION}" )
+  ENDIF(NOT MXML_FOUND OR ${MXML_VERSION} STRLESS 2.7)
 ENDIF(CMTK_BUILD_MXML)
 
 #-----------------------------------------------------------------------------
